# meksmith.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build-language-libs-c.yml  build-rs.yml  deploy-ovh-ftp.yml
codegen_lang_parser/: Cargo.toml
codegen_lang_parser/src/: lib.rs
devops/hooks/: README.md  pre-commit
language_libs/c/: CMakeLists.txt
language_libs/c/src/: meksmith.h  test_meklang_encoder.c  test_meksmith.c
meksmith/: Cargo.toml
meksmith/examples/: c_generator.rs  can-bus.mek  ecpri.mek  ping-pong.mek
meksmith/examples/data/: ping-pong.mek
meksmith/src/: ast.rs  lib.rs  parser.rs  smith.rs  smith_c.rs
meksmith/src/meklang/: ast.rs
meksmith/src/meklang/parser/: attributes.rs  base.rs  definitions.rs  enumerations.rs  mod.rs  module.rs  structures.rs  tokens.rs  types.rs  unions.rs
src/: lib.rs
website/: Cargo.toml  index.html
website/assets/: styles.css
website/src/: main.rs
website/src/components/: code_editor.rs  hyperlink.rs  mod.rs  navbar.rs  text.rs
website/src/md_docs/: grammar.md
website/src/pages/: about.rs  cheatsheet.rs  code_generator.rs  docs.rs  examples.rs  home.rs  mod.rs  not_found.rs
website/src/utils/: mod.rs  static_regex.rs
