[workspace]
resolver = "3"
members = [
    "meksmith",
    "website"
]

[workspace.dependencies]
chumsky = { version = "0.10.1", default-features = false }
leptos = { version = "0.8.11", default-features = false }
leptos_router = { version = "0.8.9", default-features = false }
console_error_panic_hook = { version = "0.1.7", default-features = false }
web-sys = { version = "0.3.77", default-features = false }
regex-lite = { version = "0.1.8", default-features = false }
once_cell = { version = "1.21.3", default-features = false }

# test dependencies, waiting for [workspace.dev-dependencies] support
tempfile = { version = "3.23.0", default-features = false }
rstest = { version = "0.26.1", default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
incremental = false
overflow-checks = false
