[package]
name = "meksmith"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/whiskeyo/meksmith.rs"

[dependencies]
chumsky = { workspace = true, default-features = false }

[dev-dependencies]
tempfile = { workspace = true, default-features = true }
rstest = { workspace = true, default-features = true }

[[example]]
name = "c_generator"
path = "examples/c_generator.rs"
